--- a/src/Styles/App.scss
+++ b/src/Styles/App.scss
@@ -12,16 +12,34 @@ header {
   width: 100%;
 }
 
-.box {
-  max-width: 100%;
+.progress {
+  height: 30px;
+  margin: 5% 20%;
+  width: 60%;
 }
 
 .fit-image {
   height: 150px;
   object-fit: cover;
   width: 150px;
+  z-index: 1;
 }
 
-.ajusting {
-  margin: 0 5% 0 5%;
+.mask {
+  background-color: black;
+  color: white;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  height: 150px;
+  opacity: 0%;
+  margin-top: 0;
+  position: absolute;
+  text-align: center;
+  width: 150px;
+  z-index: 2;
+}
+
+.mask:hover {  
+  opacity: 70%;
 }
